--- a/php-redis/index.html
+++ b/php-redis/index.html
@@ -1,6 +1,6 @@
 <html ng-app="redis">
   <head>
-    <title>Guestbook test</title>
+    <title>Guestbook 1234</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.12/angular.min.js"></script>
     <script src="controllers.js"></script>
@@ -8,7 +8,7 @@
   </head>
   <body ng-controller="RedisCtrl">
     <div style="width: 50%; margin-left: 20px">
-      <h2>Guestbook 123</h2>
+      <h2>Guestbook TAMSUMMIT 2021</h2>
     <form>
     <fieldset>
     <input ng-model="msg" placeholder="Messages" class="form-control" type="text" name="input"><br>
